Prevent navbar overflow by avatar.

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -20,3 +20,18 @@
 		color: #888;
 	}
 }
+
+.navbar-nav {
+	& > li > .user-menu-toggle {
+		padding-top: 10px;
+		padding-bottom: 10px;
+		text-align: right;
+
+		img {
+			max-height: 32px;
+			max-width: 32px;
+			border-radius: 2px;
+			margin-left: 5px;
+		}
+	}
+}
